--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #bde6f2aa);
 }
 
 @keyframes logo-spin {
@@ -39,4 +39,16 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.product-description {
+  font-size: 0.9em;
+  color: #666;
+  margin: 0.5em 0;
+  line-height: 1.4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
